Make views easier to create and maintain add a template engine

--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>Welcome</h1>
-    <p>Hello <?= htmlspecialchars($name); ?>!</p>
+    <p>Hello from a Twig template, {{ name }}!</p>
     <ul>
-        <?php foreach ($colours as $colour): ?>
-            <li><?= htmlspecialchars($colour); ?></li>
-        <?php endforeach; ?>
+        {% for colour in colours %}
+            <li>{{ colour }}</li>
+        {% endfor %}
     </ul>
 </body>
 </html>
