--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Posts{% endblock %}
+
+{% block body %}
     <h1>Welcome</h1>
     <p>Hello from a Twig template, {{ name }}!</p>
     <ul>
@@ -14,5 +10,4 @@
             <li>{{ colour }}</li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
