--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Posts{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block body %}
     <h1>Welcome</h1>
